# puzzles

./: LICENSE  README.md
word_grid/: .gitignore  .ycm_extra_conf.py  Makefile  main.c  notes.txt  word_grid.mk  word_grid.txt
word_grid/src/: word_grid.c  word_list.c
word_grid/src/include/: generics.h  word_grid.h  word_list.h
word_ladder/: CMakeLists.txt  Makefile  generics.h  main.c  queue_impl.c  queue_impl.h  str2str.mk  str2str.project  str2str.txt  word_list.c  word_list.h
